# file-duplicate-finder-rust

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  file-duplicate-finder.conf.example
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/config/: cli.rs  file_config.rs  mod.rs  scan_filter.rs
src/models/: duplicate_group.rs  manifest_diff.rs  mod.rs  remediation_result.rs  scan_metrics.rs  scan_result.rs
src/services/: content_comparer.rs  directory_scanner.rs  duplicate_finder.rs  hash_grouping.rs  hash_service.rs  manifest_diff.rs  mod.rs  remediation.rs
src/utils/: formatting.rs  logger.rs  manifest_json.rs  mod.rs  output_writer.rs  release_metadata.rs
tests/: integration.rs
tests/config/: cli_tests.rs  file_config_tests.rs  mod.rs  version_command_tests.rs
tests/services/: duplicate_finder_tests.rs  hash_service_tests.rs  manifest_diff_tests.rs  mod.rs  remediation_tests.rs
tests/utils/: formatting_tests.rs  manifest_json_tests.rs  mod.rs  output_writer_tests.rs  release_metadata_tests.rs
